# raytracer

./: .cproject  .project  CMakeLists.txt  README.md  build.sh  todo.txt
input/: sphere.yml
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
src/: main.cpp  raytracer_cpuonly.cpp  raytracer_cpuonly.h  sgnode.cpp  sgnode.h  sgsphere.cpp  sgsphere.h
src/base/: aabb.h  base.h  color.h  pixmap.cpp  pixmap.h  ray.h
src/common/: cmdlineparser.cpp  cmdlineparser.h  logger.h  simplebmp.cpp  simplebmp.h  xcl.h
src/glbackend/: glselect.h  gltexture.cpp  gltexture.h  gltypes.h
src/scene/: sgnode.cpp  sgnode.h  sgnodelist.cpp  sgnodelist.h  sgraytracer_cpuonly.cpp  sgraytracer_cpuonly.h  sgscenereader.cpp  sgscenereader.h  sgsphere.cpp  sgsphere.h  sgtransform.cpp  sgtransform.h
